--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,11 +18,10 @@
   <meta property="og:description"
     content="Connect with developers to build projects together. Match with collaborators, post projects, and find your code partner." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/og-image.png" />
 </head>
 
 <body>
