--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     content="Connect with developers to build projects together. Match with collaborators, post projects, and find your code partner." />
   <meta name="author" content="commit" />
 
-  <meta property="og:title" content="commit" />
+  <meta property="og:title" content="commit - make shit happen" />
   <meta property="og:description"
     content="Connect with developers to build projects together. Match with collaborators, post projects, and find your code partner." />
   <meta property="og:type" content="website" />
