Revert "fix name (#54)"
This reverts commit 27526fd636d696b667301c0a14585f2b2c655a72.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>commit</title>
+  <title>commit - Match with Code Collaborators</title>
   <meta name="description"
     content="Connect with developers to build projects together. Match with collaborators, post projects, and find your code partner." />
   <meta name="author" content="commit" />
 
-  <meta property="og:title" content="commit" />
+  <meta property="og:title" content="commit - Match with Code Collaborators" />
   <meta property="og:description"
     content="Connect with developers to build projects together. Match with collaborators, post projects, and find your code partner." />
   <meta property="og:type" content="website" />
